# Pipenetwork

pipenetwork/: CMakeLists.txt
pipenetwork linalg/: CMakeLists.txt
pipenetwork linalg/drivers/: main.cpp
pipenetwork/drivers/: main.cpp
